--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,3 +44,11 @@ html.modal-open {
 [data-modal-scroll] {
   -webkit-overflow-scrolling: touch;
 }
+html, body { height: 100%; }
+
+/* aktivuje se při otevřeném modalu */
+body.modal-open {
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
+}
